# raytracing.cpp

./: .gitignore  .nvim.lua  CMakeLists.txt  Justfile  README.md
src/: camera.cpp  camera.h  color.h  constants.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  image.cpp  image.h  interval.cpp  interval.h  main.cpp  material.cpp  material.h  ppm.cpp  ppm.h  ray.cpp  ray.h  render.cpp  render.h  sphere.cpp  sphere.h  utils.cpp  utils.h  vec3.cpp  vec3.h  zx_defer.h
